--- a/index.html
+++ b/index.html
@@ -1,43 +1,31 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>CSS Box Styling</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
-  </head>
-  <body>
-    <header>
-      <div class= "large-font">Word Guess Game</div>
-      <button class="start-button">Start</button>
-    </header>
+<html lang="en">
 
-    <main>
-      <section>
-        <div class="card word-guess">
-          <div class="large-font word-blanks">J _ v _ S c r_ _t</div>
-        </div>
-      </section>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Speed Reader</title>
+  <link rel="stylesheet" href="./style.css" />
+</head>
 
-      <section>
-        <div class="card results">
-          <div class = "win-loss-container">
-          <div>
-          <h2>Wins: <span class="win">0 </span> </h2>
-          <h2>Losses: <span class="lose">0</span></h2>
-        </div>
-          <button class="reset-button">Reset Score</button>
-      </div>
-          <div class= "card timer">
-            <div class = "timer-text">
-            <div class="large-font timer-count">10</div>
-            <h3>seconds remaining</h3>
-          </div>
-        
-          </div>
-        </div>
-      </section>
-    </main>
-    <script src="assets/js/script.js"></script>
-  </body>
+<body>
+  <div class="container">
+    <h2 id="countdown"></h2>
+
+    <div id="start-screen">
+
+
+      <h1 class="welcome">Game On!!!</h1>      
+      <p id="main"></p>
+      <button id="start">start</button>
+    </div>
+    <div id="questionContainer" class="hide">
+      <h2 id="questionTitle"></h2>
+      <div id="choices"></div>
+    </div>
+  </div>
+  <script src="./script.js"></script>
+</body>
+
 </html>
