adding recent changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <h2 id="countdown"></h2>
 
     <div id="start-screen">
-
+<div></div>
+<div></div>
 
       <h1 class="welcome">Game On!!!</h1>      
       <p id="main"></p>
