--- a/index.html
+++ b/index.html
@@ -14,10 +14,23 @@
     <h2 id="countdown"></h2>
 
     <div id="start-screen">
-<div></div>
-<div></div>
+      <div>
+        <table id="start">
+          <tr>
+            <td id="t1">High Scores</td>
+          </tr>          
+        </table>
+      </div>
+      <div id = "title"></div>
+      <ul>
+        <li class ="alternative"></li>
+        <li class ="alternative"></li>
+        <li class ="alternative"></li>
+        <li class ="alternative"></li>
+        <li class ="alternative"></li>
+      </ul>
 
-      <h1 class="welcome">Game On!!!</h1>      
+      <h1 class="welcome">Game On!!!</h1>
       <p id="main"></p>
       <button id="start">start</button>
     </div>
