--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id="start-screen">
       <div>
-        <table id="start">
+        <table id="table">
           <tr>
             <td id="t1">High Scores</td>
           </tr>          
